fix jumping content on scroll
found that the 90vh was causing the jitters. changed to 100vh and the
scrolling is smooth.

--- a/assets/styles/layouts/_global.scss
+++ b/assets/styles/layouts/_global.scss
@@ -142,7 +142,7 @@ html {
 
 
 .content {
-    min-height: 90vh;
+    min-height: 100vh;
     background-color: #c0ffee;
     border-width: 0 1rem;
     border-style: solid;
